--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/my-portfolio/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logesh Portfolio</title>
+    <title>Balaji Portfolio</title>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
